--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RE-post - Simplify Your Social Media Management</title>
     <link rel="stylesheet" href="/CSS/style.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <!-- Header Section -->
@@ -37,19 +41,29 @@
     <!-- Features Section -->
     <section class="features">
       <div class="feature">
-        <i class="icon connectivity-icon"></i>
+        <i class="bi bi-link-45deg"></i>
         <h3>Multi-Platform Posting</h3>
-        <p>Post to LinkedIn, Facebook, and Instagram simultaneously.</p>
+        <p>
+          Publish your content across LinkedIn, Facebook, and Instagram with a
+          single click.
+        </p>
       </div>
       <div class="feature">
-        <i class="icon calendar-icon"></i>
+        <i class="bi bi-calendar3"></i>
         <h3>Schedule Posts</h3>
-        <p>Plan your posts ahead of time and schedule them for later.</p>
+        <p>
+          Schedule your content in advance and let RE-post handle the rest. Post
+          to LinkedIn, Facebook, and Instagram simultaneously with just a few
+          clicks.
+        </p>
       </div>
       <div class="feature">
-        <i class="icon graph-icon"></i>
+        <i class="bi bi-graph-up-arrow"></i>
         <h3>Analytics & Insights</h3>
-        <p>Track your performance across all platforms.</p>
+        <p>
+          Track the performance of your social media posts with detailed
+          analytics. Gain insights to optimize your content and reach.
+        </p>
       </div>
     </section>
     <!-- Text Box Area -->
