--- a/style.css
+++ b/style.css
@@ -399,7 +399,7 @@ form {
 
 .support-form .submit-button {
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #00cc88;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -408,7 +408,7 @@ form {
 }
 
 .support-form .submit-button:hover {
-  background-color: #0056b3;
+  background-color: #009966;
 }
 
 /* Footer Section */
